Notion add simple page search (#392)
* Notion Extension

Adding Notion extension.

* Add Slack Extension

This extension allows you to search user and channel from a Slack workspace and open this conversion in the Slack app.

* Removing Slack

* Adding "How to" share database

* Adding "How to" share pages + Page empty state

* Clean Master

* Add Notion Extension (fresh start)

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Update extensions/notion/package.json

Co-authored-by: Petr Nikolaev <petr@raycast.com>

* Cache Databases

* Add Setup "How To"

* Add Screenshots

* Removed "storeValue" as it doesn't work

* Update create-database-page.tsx

* Update extensions/notion/package.json

Co-authored-by: Petr Nikolaev <petr@raycast.com>

* Simplify Search Page + Fix Infinite Hook Loop

* Fix Type

* Fix Typo

* Notion API Update: No Need for Workspace Slug

* Fix Typo

* Improve Recently Open Store

* Update create-database-page.tsx

* Improve Invalid Token Error

* Fix Type

* Fix Type

* Remove Token Length Check

Co-authored-by: Petr Nikolaev <petr@raycast.com>

--- a/extensions/notion/package.json
+++ b/extensions/notion/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notion",
-  "title": "Notion Database",
-  "description": "Fastest way to create Notion database item.",
+  "title": "Notion",
+  "description": "Fastest way to search and create Notion page.",
   "icon": "notion-logo.png",
   "author": "HenriChabrand",
   "license": "MIT",
@@ -11,6 +11,13 @@
       "title": "Create Database Page",
       "subtitle": "Notion",
       "description": "Create a database page.",
+      "mode": "view"
+    },
+    {
+      "name": "search-page",
+      "title": "Search Page",
+      "subtitle": "Notion",
+      "description": "Search database and page.",
       "mode": "view"
     }
   ],
@@ -23,20 +30,13 @@
       "description": "In Notion go to Settings & Members > Integration > Develop your own > New integration",
       "placeholder": "secret_1l3892KIWCJHJVikbiyJ7",
       "link": "https://www.notion.so/my-integrations"
-    },
-    {
-      "name": "notion_workspace_slug",
-      "type": "textfield",
-      "required": true,
-      "title": "Notion Workspace Domain",
-      "description": "In Notion go to Settings & Members > Settings > Domain",
-      "placeholder": "my-workspace-domain-slug",
-      "link": "https://www.notion.so/"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.25.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "moment": "^2.29.1",
+    "open": "^8.4.0"
   },
   "devDependencies": {
     "@types/node": "^16.4.3",
