--- a/extensions/xcode/package.json
+++ b/extensions/xcode/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "xcode",
   "title": "Xcode",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "author": "SvenTiigi",
   "license": "MIT",
   "description": "Search and open your recent Xcode Projects, manage your Simulators & Apps, view the latest Releases, search the Apple Developer Documentation and quickly clear Xcode cache files.",
@@ -44,6 +44,13 @@
       "mode": "view"
     },
     {
+      "name": "add-swift-package.command",
+      "title": "Add Swift Package",
+      "subtitle": "Xcode",
+      "description": "Add a Swift Package from an URL to an opened Xcode project",
+      "mode": "view"
+    },
+    {
       "name": "create-swift-package.command",
       "title": "Create Swift Package",
       "subtitle": "Xcode",
@@ -82,7 +89,7 @@
     "Apple Developer"
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
+    "@raycast/api": "^1.25.6",
     "dedent": "^0.7.0",
     "node-fetch": "^3.0.0",
     "rxjs": "^7.4.0",
