--- a/extensions/safari/package.json
+++ b/extensions/safari/package.json
@@ -1,24 +1,31 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "safari",
-  "title": "Safari Bookmarks",
-  "description": "List your Safari Cloud Tabs and Reading List Bookmarks",
+  "title": "Safari",
+  "description": "Manage your Safari Tabs (Local and iCloud) and Reading List",
   "icon": "safari-icon.png",
   "author": "loris",
   "license": "MIT",
   "commands": [
     {
       "name": "cloud-tabs",
-      "title": "Search Cloud Tabs",
+      "title": "Show Tabs",
       "subtitle": "Safari",
-      "description": "List, filter and open your Safari Cloud Tabs",
+      "description": "List, filter and open your Safari Tabs (Local and iCloud)",
       "mode": "view"
     },
     {
       "name": "reading-list",
-      "title": "Search Reading List",
+      "title": "Show Reading List",
       "subtitle": "Safari",
-      "description": "List, filter and open your Safari Reading List Bookmarks",
+      "description": "List, filter and open your Safari Reading List",
+      "mode": "view"
+    },
+    {
+      "name": "add-to-reading-list",
+      "title": "Add to Reading List",
+      "subtitle": "Safari",
+      "description": "Add URL to Safari Reading List",
       "mode": "view"
     }
   ],
@@ -26,6 +33,7 @@
     "@raycast/api": "^1.25.0",
     "execa": "^5.1.1",
     "lodash": "^4.17.21",
+    "osascript-tag": "^0.1.2",
     "simple-plist": "^1.1.1",
     "sql.js": "^1.6.2"
   },
