Fix for speetest typo (#425)
Noticed a typo in the description—"Speedtest via speetest.net", which should be speedtest.net—so this is a PR to fix it.

--- a/extensions/speedtest/package.json
+++ b/extensions/speedtest/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "speedtest",
   "title": "Speedtest",
-  "description": "Speedtest via speetest.net",
+  "description": "Speedtest via speedtest.net",
   "icon": "speedtest.png",
   "author": "tonka3000",
   "license": "MIT",
