Home Assistant: Upgrade (#434)
* add batteries root command

* add history action

* fix missing cover icon when state is unknown

* add battery icons

* show brightness value for lights

* add units to sensors

* add brightness control for lights

* make entity id as subtitle optional

* all volume level to media players

* unavailable lights are now gray

* add shortcut for media player mute

* add media player source selection

* add action to set media player volume

* add actionpanel sections

* add entity logbook action

* move some actions to its own file

* add icon support for sun

* move light action to its own file

* update README

* Add copy track action to mediaplayer

* rename copy track action

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -84,6 +84,13 @@
       "subtitle": "Home Assistant",
       "description": "Query Home Assistant entity attributes",
       "mode": "view"
+    },
+    {
+      "name": "batteries",
+      "title": "Batteries",
+      "subtitle": "Home Assistant",
+      "description": "Query Batteries",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -112,6 +119,15 @@
       "title": "Network Settings",
       "description": "Ignore Certificates",
       "placeholder": "Ignore Certificates"
+    },
+    {
+      "name": "showEntityId",
+      "type": "checkbox",
+      "label": "Show Entity IDs",
+      "required": false,
+      "default": false,
+      "title": "Style",
+      "description": "Show Entity IDs as subtitle"
     }
   ],
   "dependencies": {
