--- a/extensions/todoist/package.json
+++ b/extensions/todoist/package.json
@@ -47,19 +47,21 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
-    "axios": "^0.21.4",
-    "date-fns": "^2.25.0",
+    "@raycast/api": "^1.25.6",
+    "axios": "^0.24.0",
+    "date-fns": "^2.26.0",
+    "lodash": "^4.17.21",
     "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/node": "^16.11.0",
-    "@types/react": "^17.0.30",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.32.0",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.2"
   },
   "scripts": {
     "build": "ray build -e dist",
