Home Assistant: Add Color Temperature support and better state support for multiple entities (#477)
* check for color_temp mode on brightness action

* add color temperature support for light entity

* add relative brightness actions

* add rgb support for lights

* add different rgb color in light and dark theme

* add relative color temperature actions

* add motion device icon

* add support for plug state, temperature devices, input_number and rpi

* add automation actions

* add better state text for device_class update

* add motions root command

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -91,6 +91,13 @@
       "subtitle": "Home Assistant",
       "description": "Query Batteries",
       "mode": "view"
+    },
+    {
+      "name": "motions",
+      "title": "Motions",
+      "subtitle": "Home Assistant",
+      "description": "Query Motion Sensors",
+      "mode": "view"
     }
   ],
   "preferences": [
