--- a/extensions/two-factor-authentication-code-generator/package.json
+++ b/extensions/two-factor-authentication-code-generator/package.json
@@ -12,6 +12,15 @@
     "authentication",
     "login"
   ],
+  "preferences": [
+    {
+      "name": "sort",
+      "type": "checkbox",
+      "required": false,
+      "label": "Alphabetical Sorting for tokens",
+      "description": "Enable sorting"
+    }
+  ],
   "commands": [
     {
       "name": "index",
