--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,6 +2,7 @@
 
 /extensions/1password7                               @khasbilegt
 /extensions/airport                                  @siddharthsharma94
+/extensions/algolia                                  @valentindotxyz
 /extensions/amazon-aws                               @falcon
 /extensions/api-icon-list                            @petr
 /extensions/authy                                    @guga4ka
