--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -39,6 +39,7 @@
 /extensions/docker                                   @priithaamer
 /extensions/domainr                                  @fedevitaledev
 /extensions/doppler-share-secrets                    @thomas
+/extensions/elgato-key-light                         @thomas
 /extensions/emoji                                    @fezvrasta
 /extensions/ens-name-lookup                          @yukai
 /extensions/envato                                   @astroon
