Update Safari Extension (#514)
* Add Things Extension

* Add caching for faster display of lists

* Improve display of dueDate

* Fix formatDueDate pluralization

* Better handling of tabs without URLs (Fix #505)

* Better handling of tabs without URLs (Fix #505)

* Better handling of errors reading icloud tabs (Fix https://github.com/raycast/extensions/pull/309#issuecomment-983080153)

* Add support for Safari Technology Preview (Fix #470)

* Reading List: add "Group by status" setting

--- a/extensions/safari/package.json
+++ b/extensions/safari/package.json
@@ -12,14 +12,44 @@
       "title": "Show Tabs",
       "subtitle": "Safari",
       "description": "List, filter and open your Safari Tabs (Local and iCloud)",
-      "mode": "view"
+      "mode": "view",
+      "preferences": [
+        {
+          "name": "safariAppIdentifier",
+          "type": "dropdown",
+          "required": false,
+          "title": "Local Safari Browser",
+          "description": "Switch between Safari or Safari Technology Preview",
+          "default": "Safari",
+          "data": [
+            {
+              "value": "Safari",
+              "title": "Safari"
+            },
+            {
+              "value": "Safari Technology Preview",
+              "title": "Safari Technology Preview"
+            }
+          ]
+        }
+      ]
     },
     {
       "name": "reading-list",
       "title": "Show Reading List",
       "subtitle": "Safari",
       "description": "List, filter and open your Safari Reading List",
-      "mode": "view"
+      "mode": "view",
+      "preferences": [
+        {
+          "name": "groupByStatus",
+          "type": "checkbox",
+          "required": false,
+          "label": "Group by status",
+          "default": true,
+          "description": "Group items by Read/Unread status"
+        }
+      ]
     },
     {
       "name": "add-to-reading-list",
