--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -79,6 +79,7 @@
 /extensions/opsgenie                                 @ricoberger
 /extensions/party-parrot                             @thomas
 /extensions/pinboard                                 @fe9lix
+/extensions/pipedrive                                @stephendolan
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnor
 /extensions/quick-open-project                       @zerowidth
