Microsoft-edge: fixed contributor problem

--- a/extensions/microsoft-edge/package.json
+++ b/extensions/microsoft-edge/package.json
@@ -6,8 +6,7 @@
   "icon": "microsoft-edge-icon.png",
   "author": "KartikKumarSahoo",
   "contributors": [
-    "bromanko",
-    "kartikkumarsahoo"
+    "bromanko"
   ],
   "license": "MIT",
   "commands": [
