--- a/.github/workflows/extensions_build_publish.yml
+++ b/.github/workflows/extensions_build_publish.yml
@@ -11,7 +11,7 @@ on:
         default: 'build'
         required: true
       cli_version:
-        description: 'CLI Version (optional, default: "1.0.0")'
+        description: 'CLI Version (optional, eg. "1.0.0")'
         required: false
   pull_request:
     paths:
@@ -33,15 +33,15 @@ jobs:
           fetch-depth: 0
       - name: Run Ray CLI
         id: ray_cli
-        uses: raycast/github-actions/ray@v1.4.0
+        uses: raycast/github-actions/ray@v1.5.0
         with:
           access_token: "${{ secrets.RAYCAST_CLI_ACCESS_TOKEN }}"
           api_url: "${{ secrets.RAYCAST_CLI_API_URL }}"
           command: "${{ github.event.inputs.command }}"
           paths: "${{ github.event.inputs.paths }}"
-          cli_version: "${{ github.event.inputs.cli_version || '1.0.0' }}"
+          cli_version: "${{ github.event.inputs.cli_version }}"
       - name: Post Store URLs
-        uses: raycast/github-actions/git-post-store-urls-to-pr@v1.4.0
+        uses: raycast/github-actions/git-post-store-urls-to-pr@v1.5.0
         with:
           store_urls: ${{ steps.ray_cli.outputs.store_urls }}
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
