--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -75,6 +75,7 @@
 /extensions/mldocs                                   @reckoning-dev
 /extensions/music                                    @fedevitaledev
 /extensions/notion                                   @henrichabrand
+/extensions/obsidian                                 @marcjulian
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
 /extensions/party-parrot                             @thomas
