--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -59,6 +59,7 @@
 /extensions/google-trends                            @kang
 /extensions/grafana                                  @francois
 /extensions/hacker-news                              @thomas
+/extensions/harvest                                  @eluce2
 /extensions/hazeover                                 @ratoru
 /extensions/homeassistant                            @tonka3000
 /extensions/huggingcast                              @ragnor
