--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -109,6 +109,7 @@
 /extensions/spotify-controls                         @thomas
 /extensions/spotify-player                           @mattisssa
 /extensions/stackoverflow                            @reckoning-dev
+/extensions/surge                                    @ysj151215
 /extensions/swift-evolution                          @bprog
 /extensions/switchhosts                              @tiancheng92
 /extensions/tableplus                                @pernielsentikaer
