--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -75,6 +75,7 @@
 /extensions/microsoft-edge                           @kartikkumarsahoo @bromanko
 /extensions/mldocs                                   @reckoning-dev
 /extensions/music                                    @fedevitaledev
+/extensions/myip                                     @kang
 /extensions/notion                                   @henrichabrand
 /extensions/obsidian                                 @marcjulian
 /extensions/open-with-app                            @fturcheti
