--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,6 +9,7 @@
 /extensions/base64                                   @danielsinclair
 /extensions/bear                                     @hmarr
 /extensions/binance                                  @grzegorzkrukowski
+/extensions/bitbucket                                @francois
 /extensions/bitly-url-shortener                      @blessanm86
 /extensions/bitrise                                  @ubuntudroid
 /extensions/bitwarden                                @pomdtr
