Add command to love and add the currently playing track to your library (#557)
* Add command to love and add the currently playing track to your library

* Fix indentation

--- a/extensions/music/package.json
+++ b/extensions/music/package.json
@@ -65,6 +65,12 @@
       "title": "Add to Library",
       "description": "Add currently playing track to your library.",
       "mode": "no-view"
+    },
+    {
+      "name": "love-and-add-to-library",
+      "title": "Love and Add to Library",
+      "description": "Love and add currently playing track to your library.",
+      "mode": "no-view"
     }
   ],
   "dependencies": {
