--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -86,6 +86,7 @@
 /extensions/pipedrive                                @stephendolan
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnor
+/extensions/qr-code-scanner                          @stevenrce0
 /extensions/quick-open-project                       @zerowidth
 /extensions/radix                                    @peduarte
 /extensions/railway                                  @coffee-cup
