--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -19,6 +19,7 @@
 /extensions/buildkite                                @mskelton
 /extensions/calendar                                 @fuksman
 /extensions/calendly                                 @eluce2
+/extensions/can-i-use                                @thomaslombart
 /extensions/change-case                              @es183923
 /extensions/change-scroll-direction                  @gregoralbrecht
 /extensions/circle-ci                                @qeude
