--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -87,6 +87,7 @@
 /extensions/party-parrot                             @thomas
 /extensions/pinboard                                 @fe9lix
 /extensions/pipedrive                                @stephendolan
+/extensions/polished                                 @lekoarts
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnor
 /extensions/qr-code-scanner                          @stevenrce0
