--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -135,6 +135,7 @@
 /extensions/twitter                                  @tonka3000
 /extensions/two-factor-authentication-code-generator @cjdenio
 /extensions/unicode-symbols                          @mmazzarolo
+/extensions/unix-timestamp                           @destiner
 /extensions/uuid-generator                           @jmaeso
 /extensions/vault                                    @ricoberger
 /extensions/vercast                                  @matt
