--- a/extensions/coinmarketcap-crypto-crawler/package.json
+++ b/extensions/coinmarketcap-crypto-crawler/package.json
@@ -13,6 +13,13 @@
       "subtitle": "CoinMarketCap",
       "description": "Search for Coin Prices",
       "mode": "view"
+    },
+    {
+      "name": "refresh",
+      "title": "Refresh Crypto List",
+      "subtitle": "CoinMarketCap",
+      "description": "Refresh existing Crypto List cache",
+      "mode": "no-view"
     }
   ],
   "dependencies": {
