--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -80,6 +80,7 @@
 /extensions/mldocs                                   @reckoning-dev
 /extensions/music                                    @fedevitaledev
 /extensions/myip                                     @kang
+/extensions/netlify                                  @destiner
 /extensions/notion                                   @henrichabrand
 /extensions/obsidian                                 @marcjulian
 /extensions/open-with-app                            @fturcheti
