--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -93,6 +93,7 @@
 /extensions/producthunt                              @ragnor
 /extensions/qr-code-scanner                          @stevenrce0
 /extensions/quick-open-project                       @zerowidth
+/extensions/quick-search                             @iwfan
 /extensions/radix                                    @peduarte
 /extensions/railway                                  @coffee-cup
 /extensions/raindrop                                 @lardissone
