--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -58,6 +58,7 @@
 /extensions/gitlab                                   @tonka3000
 /extensions/gitmoji                                  @ricoberger
 /extensions/google-chrome                            @codely @bromanko
+/extensions/google-chrome-profiles                   @frouo
 /extensions/google-maps-search                       @ratoru
 /extensions/google-translate                         @ospfranco
 /extensions/google-trends                            @kang
