--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -67,6 +67,7 @@
 /extensions/hacker-news                              @thomas
 /extensions/harvest                                  @eluce2
 /extensions/hazeover                                 @ratoru
+/extensions/hexlify                                  @gkpln3
 /extensions/homeassistant                            @tonka3000
 /extensions/huggingcast                              @ragnor
 /extensions/imdb                                     @ryan
