--- a/extensions/large-type/package.json
+++ b/extensions/large-type/package.json
@@ -2,6 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "large-type",
   "title": "Large Type",
+  "version": "0.0.2",
   "description": "Large Type allows you to show text in large characters across your screen",
   "icon": "command-icon.png",
   "author": "gbarba",
