--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -8,6 +8,7 @@
 /extensions/authy                                    @guga4ka
 /extensions/base64                                   @danielsinclair
 /extensions/bear                                     @hmarr
+/extensions/biaodian                                 @gasolin
 /extensions/binance                                  @grzegorzkrukowski
 /extensions/bitbucket                                @francois
 /extensions/bitly-url-shortener                      @blessanm86
