Add database kanban view (#568)
* Notion Extension

Adding Notion extension.

* Add Slack Extension

This extension allows you to search user and channel from a Slack workspace and open this conversion in the Slack app.

* Removing Slack

* Adding "How to" share database

* Adding "How to" share pages + Page empty state

* Clean Master

* Add Notion Extension (fresh start)

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Fix Type

* Update extensions/notion/package.json

Co-authored-by: Petr Nikolaev <petr@raycast.com>

* Cache Databases

* Add Setup "How To"

* Add Screenshots

* Removed "storeValue" as it doesn't work

* Update create-database-page.tsx

* Update extensions/notion/package.json

Co-authored-by: Petr Nikolaev <petr@raycast.com>

* Add files via upload

* Clean Repo

* Add Database Kanban View

* Start Fixing Type

* Fixing Type

* Add files via upload

* Update ActionEditPageProperty.tsx

* Update ActionEditPageProperty.tsx

* Update ActionSetVisibleProperties.tsx

* Add files via upload

* Add files via upload

* Update DatabaseKanbanView.tsx

* Add files via upload

* Add files via upload

* Add files via upload

* Update notion.ts

* Delete notion.ts

* Add files via upload

* Add files via upload

* Add files via upload

* Remove Date From Quick Edit

* Fix Key

Co-authored-by: Petr Nikolaev <petr@raycast.com>

--- a/extensions/notion/package.json
+++ b/extensions/notion/package.json
@@ -30,6 +30,15 @@
       "description": "In Notion go to Settings & Members > Integration > Develop your own > New integration",
       "placeholder": "secret_1l3892KIWCJHJVikbiyJ7",
       "link": "https://www.notion.so/my-integrations"
+    },
+    {
+      "name": "open_in",
+      "type": "dropdown",
+      "title": "Open in...",
+      "required": false,
+      "default":"app",
+      "data":[{"title": "Notion Application", "value": "app"},{"title": "Default Browser", "value": "web"}],
+      "description": "Choose where to open Notion page."
     }
   ],
   "dependencies": {
