--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,6 +5,7 @@
 /extensions/algolia                                  @valentindotxyz
 /extensions/amazon-aws                               @falcon @hodglim
 /extensions/api-icon-list                            @petr
+/extensions/atomic                                   @joepio
 /extensions/authy                                    @guga4ka
 /extensions/base64                                   @danielsinclair
 /extensions/bear                                     @hmarr
