--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -41,6 +41,7 @@
 /extensions/css-gg                                   @astrit
 /extensions/dash                                     @rso
 /extensions/days-until-christmas                     @megapixel23
+/extensions/debank                                   @yukai
 /extensions/deepcast                                 @mooxl
 /extensions/devdocs                                  @pomdtr
 /extensions/displayplacer                            @eluce2
