--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -91,6 +91,7 @@
 /extensions/netlify                                  @destiner
 /extensions/notion                                   @henrichabrand
 /extensions/obsidian                                 @marcjulian
+/extensions/ones                                     @k8scat
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
 /extensions/party-parrot                             @thomas
