--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -146,6 +146,7 @@
 /extensions/tower                                    @tdwesten
 /extensions/transmission                             @fezvrasta
 /extensions/tuple                                    @inxilpro
+/extensions/twitch                                   @dieserrobin
 /extensions/twitter                                  @tonka3000
 /extensions/two-factor-authentication-code-generator @cjdenio
 /extensions/unicode-symbols                          @mmazzarolo
