--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -38,6 +38,7 @@
 /extensions/conventional-comments                    @krzysztofzuraw
 /extensions/copy-gcp-icons                           @pomdtr
 /extensions/cratecast                                @matt
+/extensions/cricketcast                              @sampoder
 /extensions/css-gg                                   @astrit
 /extensions/dash                                     @rso
 /extensions/days-until-christmas                     @megapixel23
